oracle/wallabag/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: db
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: db
