oracle/wallabag/wallabag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag-ingress


spec:
  rules:
    - host: wallabag.haijin666.top
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: wallabag-service
                  port:
                    number: 80
